<resources>
    <string name="app_name">TimeZonesTestTask</string>
    <string name="start_game">Начать игру</string>
    <string name="casual_mode">Обычный режим</string>
    <string name="time_mode">Игра на время</string>
    <string name="text_game_mode">Выберете желаемый режим игры: Обычный или на время</string>
    <string name="next_page">Далее</string>
    <string name="check_page">Проверить</string>
    <string name="restart_game">Сыграть ещё раз!</string>
    <string name="congratulations">Поздравляю!</string>
    <string name="finish_game">Вы закончили игру!</string>
    <string name="score_finish_page">Вы набрали "@totel_score"  очков</string>
    <string name="city1">Москва</string>
    <string name="city2">Париж</string>
    <string name="city3">Рио</string>
    <string name="city4">Ванкувер</string>
    <string name="city5">Сеул</string>
    <string name="city6">Иерихон</string>
    <string name="score">Очки</string>
    <string name="time">Время</string>
    <string name="scoreValues">0</string>
    <string name="timeValues">10</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>