<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/timeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/button" />

    <ImageView
        android:id="@+id/casualView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/timeView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/button" />

    <TextView
        android:id="@+id/ChooseGameModeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:text="@string/text_game_mode"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/casualView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/timeGameMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_mode"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/timeView"
        app:layout_constraintEnd_toEndOf="@+id/timeView"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/timeView"
        app:layout_constraintTop_toTopOf="@+id/timeView"
        app:layout_constraintVertical_bias="0.357" />

    <TextView
        android:id="@+id/casualGameMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/casual_mode"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/casualView"
        app:layout_constraintEnd_toEndOf="@+id/casualView"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/casualView"
        app:layout_constraintTop_toTopOf="@+id/casualView"
        app:layout_constraintVertical_bias="0.392" />
</androidx.constraintlayout.widget.ConstraintLayout>